# ewb-sdk-examples-python

./: .gitignore  README.md  changelog.md  pyproject.toml  setup.py  shell:  tox.ini
.github/workflows/: python-lib-release.yml
docs/: docusaurus.config.js  package-lock.json  package.json  sidebars.js  versions.json
docs/archive/: versions.json
docs/docs/: build_network_hierarchy.mdx  connecting-to-ewb.mdx  creating_and_uploading_studies.mdx  downstream_and_upstream_trace_use_case.mdx  examine-connectivity.mdx  example1.mdx  fetching_network_hierarchy.mdx  fetching_network_model.mdx  ieee_example.mdx  network_service_interactions.mdx
docs/site-config/: release-notes.md
docs/src/pages/: release-notes.md
docs/versioned_docs/version-0.2.0/: ieee_example.mdx
docs/versioned_docs/version-0.5.0/: build_network_hierarchy.mdx
docs/versioned_sidebars/: version-0.5.0-sidebars.json
scratches/: auth_config.json  batteries.csv  batteries.py  pp_evo.py  style.json
src/interventions/: tap_settings_intervention.py
src/zepben/examples/: all_ratings_csv.py  building_network_hierarchy.py  conductor_tx_ratings_endeavour.py  connecting_to_grpc_service.py  current_state_manipulations.py  dsub_from_nmi.py  emergy_consumer_device_hierarchy.py  emergy_consumer_device_hierarchy_downstream_context.py  energy_consumer_device_heirarchy.py  energy_consumer_device_hierarchy.py  energy_consumer_device_hierarchy_downstream.py  examining_connectivity.py  export_open_dss_model.py  extract_poles.py  fetching_network_hierarchy.py  fetching_network_model.py  id_csv_generator.py  test.ipynb  (+23 more)
(+69 files in other folders)
