#  Copyright 2025 Zeppelin Bend Pty Ltd
#
#  This Source Code Form is subject to the terms of the Mozilla Public
#  License, v. 2.0. If a copy of the MPL was not distributed with this
#  file, You can obtain one at https://mozilla.org/MPL/2.0/.

[build-system]
requires = [
    "setuptools",
    "wheel",
    "build>=1.2.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "zepben.examples"
description = "Module containing examples for interacting with Zepben's platform"
version = "0.7.0b3"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MPL-2.0"
requires-python = '>=3.10,<3.13'
authors = [
    {name = "Zeppelin Bend", email = "oss@zepben.com"}
]
dependencies = [
    "zepben.eas==0.27.0b1",
    "zepben.ewb==1.1.0b14",
    "numba==0.60.0",
    "geojson==2.5.0",
    "gql[requests]==3.5.3",
    "geopandas",
    "pandas",
    "shapely",
    "tqdm"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]

[project.urls]
Repository = "https://github.com/zepben/ewb-sdk-examples-python"
Homepage = "https://zepben.com"

[project.optional-dependencies]
test = [
    "pytest>=7.4.4, <9",
    "pytest-cov==6.1.1",
    "pytest-asyncio==0.26.0"
]
